--- a/BreakingPark/index.html
+++ b/BreakingPark/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Bayon&display=swap');
+    </style>
     <title>Vite + React</title>
   </head>
   <body>
@@ -11,3 +14,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
