--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      var global = window;
+    </script>
   </body>
 </html>
 
